<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_8"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_customer_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_pembeli"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_customer_name"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:hint="@string/masukkan_nama_anda"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_customer_name_title" />

    <TextView
        android:id="@+id/tv_choose_snacks_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:text="@string/pilih_jajanan"
        app:layout_constraintTop_toBottomOf="@id/et_customer_name" />

    <RadioGroup
        android:id="@+id/rg_choose_snacks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_snacks_title">

        <RadioButton
            android:id="@+id/rb_cireng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cireng_isi" />

        <RadioButton
            android:id="@+id/rb_bakso_goreng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bakso_goreng" />

        <RadioButton
            android:id="@+id/rb_roti_bakar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roti_bakar" />

        <RadioButton
            android:id="@+id/rb_seblak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seblak" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_order_amount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:text="@string/jumlah_pesanan"
        app:layout_constraintTop_toBottomOf="@id/rg_choose_snacks" />

    <Button
        android:id="@+id/btn_decrease_order_amount"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="@dimen/dimen_4"
        android:text="@string/minus"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_order_amount_title" />

    <TextView
        android:id="@+id/tv_order_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_decrease_order_amount"
        app:layout_constraintLeft_toRightOf="@id/btn_decrease_order_amount"
        app:layout_constraintTop_toTopOf="@id/btn_decrease_order_amount"
        tools:text="99" />

    <Button
        android:id="@+id/btn_increase_order_amount"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:text="@string/plus"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/tv_order_amount"
        app:layout_constraintTop_toTopOf="@id/btn_decrease_order_amount" />

    <Button
        android:id="@+id/btn_order"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:text="@string/pesan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_decrease_order_amount" />

    <TextView
        android:id="@+id/tv_order_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        app:layout_constraintTop_toBottomOf="@id/btn_order" />

</android.support.constraint.ConstraintLayout>
